gennemkørt hele projektet og rettet det til!